--- a/css/style.css
+++ b/css/style.css
@@ -24,10 +24,7 @@ ul, ol { margin: 1em 0; padding: 0 0 0 20px; }
 img { border: 0; max-width: 100%; }
 	
 .title { font-size: 0.8em; font-weight: normal;}
-.hero { padding: 2em; background-color: #f8f8f8; font-size:1.2em;
-  border-bottom: 1px solid #ccc;
-  border-top: 1px solid #ccc;
-}
+.hero { padding: 2em; background-color: #f8f8f8; font-size:1.2em; border-bottom: 1px solid #ccc; border-top: 1px solid #ccc;}
 
 .content { padding: 1em 1em; }
 .content li { list-style-type: none; font-size: 1.1em;}
