--- a/css/style.css
+++ b/css/style.css
@@ -6,10 +6,9 @@ html {
   -webkit-text-size-adjust: none;
 }
 header { padding: 0 0.5em; color: #C90B0B; }
-header img { border-radius: 40px; float: left; }
-header p { font-size:1.5em; font-weight: bold; padding-left: 4em;}
 header, footer, .container { max-width: 45em; margin: 0 auto; }
-
+.header_p { font-size:1.5em; font-weight: bold; padding-left: 4em;}
+.header_img {border-radius: 40px; float: left;}
 body { margin: 0; font-size: 14px; line-height: 1.61; font-weight: 400; background: #fff; }
 body, button, input, select, textarea { font-family: 'Open Sans', sans-serif; color: #333; }
 
